--- a/plugin/LegacyUpgrade.csproj
+++ b/plugin/LegacyUpgrade.csproj
@@ -1,5 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
+		<PostBuildEvent>modpacker.py local</PostBuildEvent>
+	</PropertyGroup>
+	<PropertyGroup>
 		<TargetFramework>net472</TargetFramework>
 		<OutputType>Library</OutputType>
 		<LangVersion>7</LangVersion>
