--- a/meta/manifest.json
+++ b/meta/manifest.json
@@ -6,6 +6,7 @@
     "description": "Allows the player to form a Legacy Bond with an item, and eventually upgrade it to its legacy version (similar to vanilla legacy chest upgrade). The enchantment recipe can be bought from the Soroborean Caravanner.",
     "dependencies": [
         "BepInEx-BepInExPack_Outward-5.4.18",
-        "sinai-dev-SideLoader-3.7.14"
+        "sinai-dev-SideLoader-3.7.14",
+        "Faeryn-LocalizationExtension-1.1.1"
     ]
 }
